@@ -22,6 +22,8 @@
 
 === New features
 
+- https://github.com/eclipse-sirius/sirius-components/issues/1112[#1112] [explorer] Add support for Ctrl+click or ⌘+click to select multiple elements in the explorer
+
 == v2022.3.0
 
 === Architectural decision records
